kubernetes/hands-on/k3d-local/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    purpose: k3d-hands-on
